--- a/css/styles1.css
+++ b/css/styles1.css
@@ -49,7 +49,7 @@ ul {
   font-size: 14px;
   line-height: calc(16 / 14);
   color: var(--secondary-text-color);
-  padding-right: 225px;
+  margin-right: 225px;
 }
 .header-link:hover,
 .header-link:focus {
@@ -76,6 +76,15 @@ ul {
   border-radius: 4px;
   cursor: pointer;
   padding: 5px 10px;
+}
+
+.text-for-profilepics > ul li {
+  background-color: var(--white-color);
+  box-shadow: 0px 2px 1px 0px #00000033;
+
+  box-shadow: 0px 1px 1px 0px #00000024;
+
+  box-shadow: 0px 1px 3px 0px #0000001f;
 }
 .hero-button:hover,
 .hero-button:focus {
@@ -339,7 +348,7 @@ ul {
   display: flex;
   justify-content: center;
   max-width: 270px;
-  margin: 0px 30px;
+  margin: 0px 300px;
 }
 .paragraphs-discription {
   width: 1170px;
@@ -362,32 +371,47 @@ header > nav li {
   justify-content: space-between;
 }
 
-.text-for-profilepics > ul li {
-  background-color: var(--white-color);
-  box-shadow: 0px 2px 1px 0px #00000033;
-
-  box-shadow: 0px 1px 1px 0px #00000024;
-
-  box-shadow: 0px 1px 3px 0px #0000001f;
-}
 header {
   width: 1600px;
   height: 80px;
   left: 0px;
   top: 0px;
-
   background: #ffffff;
 }
 header > nav {
   max-width: fit-content;
-}
-header > nav li {
-  background-color: #2f303a;
+  display: flex;
   justify-content: space-between;
+  align-items: center;
+}
+
+header > nav li {
+  margin: 0px 40px;
+}
+header > ul {
+  align-items: center;
+  margin-right: 20px;
+}
+header > ul li a {
+  margin-right: 20px;
+}
+.header-link {
+}
+.positioning-header-email-phone {
+  padding-left: 220px;
+  margin-left: 50px;
+}
+.hero {
+  flex-flow: column;
+  text-align: center;
+  display: flex;
+}
+.hero > .hero-button {
+  align-items: center;
+  justify-content: center;
 }
 .container {
   max-width: 1600px;
   max-height: 2359px;
   box-sizing: border-box;
-  content: ;
 }
