--- a/css/styles1.css
+++ b/css/styles1.css
@@ -11,7 +11,6 @@ body {
   font-size: 14px;
   line-height: 16px;
   letter-spacing: 0.02em;
-  max-width: 1600px;
 }
 * {
   text-decoration: none;
@@ -49,7 +48,6 @@ ul {
   font-size: 14px;
   line-height: calc(16 / 14);
   color: var(--secondary-text-color);
-  margin-right: 225px;
 }
 .header-link:hover,
 .header-link:focus {
@@ -57,7 +55,7 @@ ul {
 }
 .hero {
   background-color: var(--background-dark-color);
-  padding: 200px;
+  /*padding: 200px;*/
   align-items: center;
 }
 
@@ -206,12 +204,7 @@ address {
 }
 
 header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px 10%;
   height: 80px;
-  width: 1600px;
   left: 0px;
   top: 0px;
   border-radius: 0px;
@@ -251,6 +244,7 @@ header {
   border-radius: 4px;
   border: none;
   cursor: pointer;
+  padding: 10px 25px;
 }
 
 .all-buttons > button:hover {
@@ -300,118 +294,247 @@ a {
   color: #757575;
 }
 
-/*positioning index*/
+/*header*/
+.container {
+  max-width: 1200px;
+  max-height: 2359px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+}
+ul {
+  padding: 0px;
+  margin-top: 0;
+  margin-bottom: 0px;
+}
+body {
+  margin: 0px;
+}
+header {
+  margin: 0px;
+}
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
-header.header-navigation-link {
+.header-container nav {
   display: flex;
-  /* justify-content: space-between;*/
-  margin-left: 69px;
-}
-header .header-navigation-link li {
-  display: flex;
-  margin: 0px 20px;
-}
-.text-for-profilepics ul {
-  display: flex;
-  padding: 10px 20px;
 }
 
-.all-buttons button {
-  padding: 10px 20px;
+.header-container {
+  border-bottom: 1px solid #ececec;
 }
+h1 {
+  margin-bottom: 0px;
+}
+.header-container {
+  display: flex;
+  align-items: center;
+}
+.navigation-list-1 {
+  display: flex;
+  align-items: center;
+}
+.header-logo {
+  margin-right: 100px;
+}
+
+.navigation-item:not(:last-child) {
+  margin-right: 70px;
+}
+
+.header-navigation-link {
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+.header-contacts-1 {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+}
+.navigation-contact-info-1 {
+  margin-right: 50px;
+}
+
+/*button backgounrd and button*/
+
+.hero {
+  padding-top: 200px;
+  padding-right: 200px;
+  padding-left: 200px;
+  padding-bottom: 280px;
+}
+
+.hero-button-positioning {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+/*
+.container button {
+  align-items: center;
+  padding-left: 200px;
+}
+*/
+/*paragraph section*/
+
+.paragraphs-discription {
+  margin-top: 94px;
+}
+
+.positioning-for-paragraphs-1 {
+  display: flex;
+}
+
+.paragraphs-item-1 {
+  max-width: 270px;
+}
+
+.paragraphs-item-1:not(:last-child) {
+  margin-right: 30px;
+}
+
+.what-we-do-positioning {
+  display: flex;
+  margin-top: 50px;
+}
+
+.features-item-1:not(:last-child) {
+  margin-right: 30px;
+}
+
+.title-for-images1 {
+  margin-top: 100px;
+}
+
+.title-for-images2 {
+  padding-top: 94px;
+  padding-bottom: 50px;
+  margin: 0px;
+}
+
+.text-for-profilepics {
+  margin-top: 94px;
+}
+
+.profilepic-positioning-1 {
+  display: flex;
+  padding-bottom: 94px;
+}
+
+.profilepic-item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.profilepic-item {
+  box-shadow: 0px 2px 1px 0px #00000033;
+
+  box-shadow: 0px 1px 1px 0px #00000024;
+
+  box-shadow: 0px 1px 3px 0px #0000001f;
+  border-radius: 0px 0px 4px 4px;
+}
+
+.footer-paddings {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+/*portfolio page*/
+.header-container-2 {
+  display: flex;
+  align-content: center;
+}
+.header-section-2 {
+  border-bottom: 1px solid #ececec;
+}
+.header-section-2 ul {
+  display: flex;
+}
+
+.navigation-list-2 {
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+.navigation-item-2:not(:last-child) {
+  margin-right: 70px;
+}
+
+.navigation-item:not(:last-child) {
+  margin-right: 70px;
+}
+
+.header-contacts-2 {
+  align-items: center;
+  margin-left: auto;
+}
+
+.navigation-contact-info-2 {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  margin-right: 50px;
+}
+
+.button-positioning-list {
+  display: flex;
+}
+
 .filters-all-buttons {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 94px;
+}
+.filters-all-buttons button {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 26px;
+}
+.button-positioning-list-2:not(:last-child) {
+  margin-right: 8px;
 }
 
-.filters-all-buttons > li {
-  display: flex;
-  padding: 10px;
-}
-
-.text-for-profilepics2 {
+.the-9-images {
   display: flex;
   flex-wrap: wrap;
-  margin: 20px 100px;
+  margin-top: 50px;
+  margin-bottom: 94px;
 }
-.text-for-profilepics2 > li {
-  margin: 10px 20px;
-  /*padding: 10px 10px;*/
-}
-ul {
-  display: flex;
-  justify-content: center;
+.profile-images-title-2 {
+  margin-left: 10px;
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
 
-.paragraphs-disription > ul {
-  display: flex;
-  justify-content: center;
-  max-width: 270px;
-  margin: 0px 300px;
-}
-.paragraphs-discription {
-  width: 1170px;
-  height: 95px;
-  left: 215px;
-  top: 774px;
-  justify-content: center;
-}
-main.paragraphs-discription {
-  justify-content: center;
+.paragraphs2 {
+  margin-top: 0px;
+  margin-left: 10px;
+  padding-bottom: 15px;
 }
 
-.title-for-images1 > ul {
-  margin: 10px 30px;
+.computerimg1-9-same {
+  margin: 8px;
+  border: 1px solid #eeeeee;
 }
-section li {
-  margin: 10px;
+.footer-logo {
+  margin-bottom: 5px;
 }
-header > nav li {
-  justify-content: space-between;
-}
-
-header {
-  width: 1600px;
-  height: 80px;
-  left: 0px;
-  top: 0px;
-  background: #ffffff;
-}
-header > nav {
-  max-width: fit-content;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.footer-paddings-2 {
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
-header > nav li {
-  margin: 0px 40px;
+/*
+body {
+  max-width: max-content;
 }
-header > ul {
-  align-items: center;
-  margin-right: 20px;
-}
-header > ul li a {
-  margin-right: 20px;
-}
-.header-link {
-}
-.positioning-header-email-phone {
-  padding-left: 220px;
-  margin-left: 50px;
-}
-.hero {
-  flex-flow: column;
-  text-align: center;
-  display: flex;
-}
-.hero > .hero-button {
-  align-items: center;
-  justify-content: center;
-}
+*/
 .container {
-  max-width: 1600px;
-  max-height: 2359px;
-  box-sizing: border-box;
+  max-width: 1200px;
 }
