--- a/css/styles1.css
+++ b/css/styles1.css
@@ -226,9 +226,8 @@ address {
 
 header {
   height: 80px;
-  left: 0px;
-  top: 0px;
   border-radius: 0px;
+  border-bottom: 1px var(--accent-color);
 }
 
 .top-bar {
@@ -429,17 +428,13 @@ h1 {
   margin-right: 30px;
 }
 
-.what-we-do-positioning {
-  display: flex;
-  margin-top: 50px;
-}
 
 .features-item-1:not(:last-child) {
   margin-right: 30px;
 }
 
 .title-for-images1 {
-  margin-top: 100px;
+  padding-top: 100px;
 }
 
 .title-for-images2 {
@@ -500,6 +495,10 @@ h1 {
 
 .navigation-item:not(:last-child) {
   margin-right: 70px;
+}
+
+.navigation-item {
+  display: block;
 }
 
 .header-contacts-2 {
@@ -576,5 +575,112 @@ body {
 }
 */
 .container {
-  max-width: 1200px;
+  width: 1200px;
+  margin: 0 auto;
+}
+
+
+.header-section {
+  border-bottom: #ECECEC;
+  border-bottom-style: solid;
+  border: 1px solid #ECECEC;
+
+}
+
+* {
+  margin: 0px;
+  padding: 0px;
+}
+
+.header-container {
+  align-items: center;
+}
+
+.header-navigation-link-2 {
+  display: flex;
+  align-items: center;
+
+}
+
+.header-logo {
+  font-weight: 700;
+}
+
+.text-for-paragraphs {
+  margin-top: 10px;
+}
+
+.paragraphs {
+  padding-top: 10px;
+}
+
+
+.paragraphs-discription {
+  padding-top: 94px;
+  margin-top: 0px;
+}
+
+.what-we-do-positioning {
+  display: flex;
+  padding-top: 50px;
+  margin-top: 0px;
+}
+
+.footer-logo-1 {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.footer-logo-2 {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.footer-paddings-1 {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.footer-paddings-2 {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.footer-paragraph-space-1 {
+  margin-top: 2px;
+}
+
+.footer-paragraph-space-2 {
+  margin-top: 2px;
+}
+
+.navigation-contact-info-1 {
+  padding-right: 50px;
+  margin: 0px;
+}
+
+
+.titles-for-paragraphs {
+  margin-bottom: 10px;
+}
+
+.text-for-paragraphs {
+  margin-top: 0px;
+}
+
+.text-for-profilepics {
+  margin-top: 0px;
+}
+
+.images-padding-1 {
+  padding-bottom: 94px;
+}
+
+.profile-pic-spaces-p-1 {
+  padding: 30px 0px;
+}
+
+.hero-button-positioning {
+  margin-left: 500px;
+  margin-right: auto;
 }
