--- a/css/styles1.css
+++ b/css/styles1.css
@@ -354,12 +354,8 @@ header {
   display: flex;
 }
 
-.header-container {
-  border-bottom: 1px solid #ececec;
-}
-
 h1 {
-  margin-bottom: 0px;
+  margin-bottom: 30px;
 }
 
 .header-container {
@@ -556,8 +552,9 @@ h1 {
 }
 
 .computerimg1-9-same {
-  margin: 8px;
-  border: 1px solid #eeeeee;
+  margin: auto;
+  margin-bottom: 30px;
+  border-bottom: 1px solid #eeeeee;
 }
 
 .footer-logo {
@@ -682,5 +679,13 @@ body {
 
 .hero-button-positioning {
   margin-left: 500px;
-  margin-right: auto;
+  margin: auto;
+  padding: 10px 20px;
+
+}
+
+.profile-pic-spaces-p-2 {
+  padding: 20px 24px;
+  border: 1px solid #EEEEEE;
+  border-top: 0px;
 }
