--- a/css/styles1.css
+++ b/css/styles1.css
@@ -391,8 +391,6 @@ header {
   background-color: var(--background-dark-color);
 }
 
-
-
 .paragraphs-discription {
   margin-top: 94px;
 }
@@ -585,12 +583,6 @@ header {
   padding-top: 10px;
 }
 
-
-.paragraphs-discription {
-  padding-top: 94px;
-  margin-top: 0px;
-}
-
 .what-we-do-positioning {
   display: flex;
   padding-top: 50px;
@@ -602,26 +594,13 @@ header {
   margin-bottom: 10px;
 }
 
-.footer-logo-2 {
-  display: block;
-  margin-bottom: 10px;
-}
 
 .footer-paddings-1 {
   padding-top: 60px;
   padding-bottom: 60px;
 }
 
-.footer-paddings-2 {
-  padding-top: 60px;
-  padding-bottom: 60px;
-}
-
 .footer-paragraph-space-1 {
-  margin-top: 2px;
-}
-
-.footer-paragraph-space-2 {
   margin-top: 2px;
 }
 
@@ -649,11 +628,16 @@ header {
 
 .profile-pic-spaces-p-1 {
   padding: 30px 0px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
+
 
 
 .profile-pic-spaces-p-2 {
   padding: 20px 24px;
-  border: 1px solid #EEEEEE;
   border-top: 0px;
+  background: #FFFFFF;
+  border: 0px 1px 1px 1px;
+  border-color: #EEEEEE;
 }
