--- a/css/styles1.css
+++ b/css/styles1.css
@@ -641,3 +641,9 @@ header {
   border: 0px 1px 1px 1px;
   border-color: #EEEEEE;
 }
+
+/*need to edit later on to homework number 4 */
+
+.header {
+  height: 0px
+}
