--- a/css/styles1.css
+++ b/css/styles1.css
@@ -152,6 +152,7 @@ ul {
 
 .paragraphs {
   font-weight: 400;
+  margin-top: 10px;
 }
 
 .paragraphs2 {
@@ -208,7 +209,16 @@ address {
 }
 
 .our-futures {
-  display: none;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 /*next page / portfolio*/
@@ -222,7 +232,6 @@ address {
 }
 
 header {
-  height: 80px;
   border-radius: 0px;
   border-bottom: 1px var(--accent-color);
 }
@@ -278,27 +287,6 @@ header {
 a {
   font-weight: 500;
   color: var(--secondary-text-color);
-}
-
-.all-blue-button>button {
-  color: var(--white-color);
-  background-color: var(--accent-color);
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 26px;
-  text-align: center;
-  letter-spacing: 0.03em;
-  cursor: pointer;
-  box-shadow: 0px 2px 2px 0px #0000001f;
-  box-shadow: 0px 1px 2px 0px #00000014;
-  box-shadow: 0px 3px 1px 0px #0000001a;
-  padding: 5px 20px;
-  border-radius: 4px;
-}
-
-.all-blue-button>button:hover,
-.all-blue-button>button:focus {
-  color: var(--primary-text-color);
 }
 
 .profile-images-title-2 {
@@ -379,20 +367,23 @@ header {
   margin-left: auto;
 }
 
-.navigation-contact-info-1 {
+.navigation-contact-info-1:not(:last-child) {
   margin-right: 50px;
+  padding-right: 50px;
+  margin: 0px;
+
 }
 
 /*button backgounrd and button*/
 
 .hero {
-  padding-top: 200px;
-  padding-bottom: 280px;
+  padding-top: 212px;
+  padding-bottom: 212px;
   background-color: var(--background-dark-color);
 }
 
 .paragraphs-discription {
-  margin-top: 94px;
+  padding-top: 94px;
 }
 
 .positioning-for-paragraphs-1 {
@@ -413,22 +404,20 @@ header {
 }
 
 .title-for-images1 {
-  padding-top: 100px;
+  padding-top: 0px;
 }
 
 .title-for-images2 {
-  padding-top: 94px;
-  padding-bottom: 50px;
-  margin: 0px;
+  margin-bottom: 50px;
 }
 
 .text-for-profilepics {
-  margin-top: 94px;
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
 .profilepic-positioning-1 {
   display: flex;
-  padding-bottom: 94px;
 }
 
 .profilepic-item:not(:last-child) {
@@ -485,7 +474,7 @@ header {
   margin-left: auto;
 }
 
-.navigation-contact-info-2 {
+.navigation-contact-info-2:not(:last-child) {
   padding-top: 32px;
   padding-bottom: 32px;
   margin-right: 50px;
@@ -499,7 +488,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 94px;
+  margin-top: 0px;
 }
 
 .filters-all-buttons button {
@@ -518,27 +507,33 @@ header {
   display: flex;
   flex-wrap: wrap;
   margin-top: 50px;
-  margin-bottom: 94px;
-  min-width: 1200px;
 }
 
 .profile-images-title-2 {
-  margin-left: 10px;
-  margin-top: 20px;
   margin-bottom: 10px;
 }
 
 .paragraphs2 {
   margin-top: 0px;
-  margin-left: 10px;
-  padding-bottom: 15px;
+
 }
 
 .computerimg1-9-same {
-  margin: auto;
+  margin-top: auto;
+  margin-left: 0px;
+  padding-left: 0px;
   margin-bottom: 30px;
+  margin-right: 30px;
   border-bottom: 1px solid #eeeeee;
+
 }
+
+
+.computerimg1-9-same:nth-child(3n) {
+  margin-right: 0px;
+}
+
+
 
 .footer-logo {
   margin-bottom: 5px;
@@ -579,14 +574,9 @@ header {
   margin-top: 10px;
 }
 
-.paragraphs {
-  padding-top: 10px;
-}
-
 .what-we-do-positioning {
   display: flex;
-  padding-top: 50px;
-  margin-top: 0px;
+  margin-top: 50px;
 }
 
 .footer-logo-1 {
@@ -604,12 +594,6 @@ header {
   margin-top: 2px;
 }
 
-.navigation-contact-info-1 {
-  padding-right: 50px;
-  margin: 0px;
-}
-
-
 .titles-for-paragraphs {
   margin-bottom: 10px;
 }
@@ -618,11 +602,9 @@ header {
   margin-top: 0px;
 }
 
-.text-for-profilepics {
-  margin-top: 0px;
-}
 
 .images-padding-1 {
+  padding-top: 94px;
   padding-bottom: 94px;
 }
 
@@ -636,14 +618,20 @@ header {
 
 .profile-pic-spaces-p-2 {
   padding: 20px 24px;
-  border-top: 0px;
   background: #FFFFFF;
-  border: 0px 1px 1px 1px;
-  border-color: #EEEEEE;
+  border-top: 0px solid #EEEEEE;
+  border-right: 1px solid #EEEEEE;
+  border-bottom: 1px solid #EEEEEE;
+  border-left: 1px solid #EEEEEE;
 }
 
 /*need to edit later on to homework number 4 */
 
 .header {
   height: 0px
+}
+
+.main-page {
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
