fixed done hw 03
.

--- a/css/styles1.css
+++ b/css/styles1.css
@@ -53,6 +53,8 @@ ul {
   font-size: 14px;
   line-height: calc(16 / 14);
   color: var(--secondary-text-color);
+  padding-bottom: 30px;
+  padding-top: 30px;
 }
 
 .header-link:hover,
@@ -377,8 +379,8 @@ header {
 /*button backgounrd and button*/
 
 .hero {
-  padding-top: 212px;
-  padding-bottom: 212px;
+  padding-top: 200px;
+  padding-bottom: 200px;
   background-color: var(--background-dark-color);
 }
 
@@ -533,7 +535,9 @@ header {
   margin-right: 0px;
 }
 
-
+.computerimg1-9-same:nth-last-child(-n+3) {
+  margin-bottom: 0px;
+}
 
 .footer-logo {
   margin-bottom: 5px;
@@ -545,10 +549,7 @@ header {
 }
 
 .header-section {
-  border-bottom: #ECECEC;
-  border-bottom-style: solid;
-  border: 1px solid #ECECEC;
-
+  border-bottom: 1px solid #ECECEC;
 }
 
 * {
@@ -612,6 +613,7 @@ header {
   padding: 30px 0px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  background-color: #FFFFFF
 }
 
 
